--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -90,7 +90,8 @@ img {
   max-width: 100%; }
 
 figure {
-  margin: 0; }
+  margin: 0;
+  text-align: center; }
 
 .headline {
   margin: 64px 0; }
@@ -120,7 +121,8 @@ figure {
   top: 0;
   right: 0;
   text-align: right;
-  padding: 24px; }
+  padding: 24px;
+  z-index: 1000; }
 
 .menu {
   margin: 0;
@@ -141,6 +143,8 @@ figure {
   color: #44515C;
   font-size: 1.2rem;
   display: block; }
+  .menu__a:hover, .menu__a--active {
+    color: #265278; }
 
 .menu__a:after, .customer:after {
   content: none; }
