--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,29 +1,35 @@
 @import url("//hello.myfonts.net/count/3b1adf");
-@import url(aos.css);
+@import "aos.css";
 @font-face {
   font-family: "NHaasGroteskDSPro-55Rg";
   src: url("../fonts/3B1ADF_0_0.eot");
   src: url("../fonts/3B1ADF_0_0.eot?#iefix") format("embedded-opentype"), url("../fonts/3B1ADF_0_0.woff2") format("woff2"), url("../fonts/3B1ADF_0_0.woff") format("woff"), url("../fonts/3B1ADF_0_0.ttf") format("truetype");
-  font-display: swap; }
+  font-display: swap;
+}
 @font-face {
   font-family: "NHaasGroteskDSPro-75Bd";
   src: url("../fonts/3B1ADF_1_0.eot");
   src: url("../fonts/3B1ADF_1_0.eot?#iefix") format("embedded-opentype"), url("../fonts/3B1ADF_1_0.woff2") format("woff2"), url("../fonts/3B1ADF_1_0.woff") format("woff"), url("../fonts/3B1ADF_1_0.ttf") format("truetype");
-  font-display: swap; }
+  font-display: swap;
+}
 @font-face {
   font-family: "UniversLTPro-45Light";
   src: url("../fonts/3B1ADF_2_0.eot");
   src: url("../fonts/3B1ADF_2_0.eot?#iefix") format("embedded-opentype"), url("../fonts/3B1ADF_2_0.woff2") format("woff2"), url("../fonts/3B1ADF_2_0.woff") format("woff"), url("../fonts/3B1ADF_2_0.ttf") format("truetype");
-  font-display: swap; }
+  font-display: swap;
+}
 * {
-  box-sizing: border-box; }
+  box-sizing: border-box;
+}
 
 html {
-  height: 100%; }
+  height: 100%;
+}
 
 html,
 body {
-  font-size: 16px; }
+  font-size: 16px;
+}
 
 body {
   background-color: #fff;
@@ -33,7 +39,8 @@ body {
   font-family: UniversLTPro-45Light;
   line-height: 1.45;
   letter-spacing: 0.015em;
-  min-height: 100%; }
+  min-height: 100%;
+}
 
 .bg-video {
   position: fixed;
@@ -45,7 +52,8 @@ body {
   object-fit: cover;
   font-family: "object-fit: cover;";
   object-position: bottom center;
-  opacity: 0.4; }
+  opacity: 0.4;
+}
 
 h1,
 h2,
@@ -53,58 +61,71 @@ h3 {
   font-family: "NHaasGroteskDSPro-75Bd";
   font-weight: normal;
   font-size: 1.44rem;
-  letter-spacing: 0.02em; }
+  letter-spacing: 0.02em;
+}
 
 h1 {
-  font-size: 2.986rem; }
+  font-size: 2.986rem;
+}
 
 h2 {
-  font-size: 2.074rem; }
+  font-size: 2.074rem;
+}
 
 h1,
 h2 {
-  line-height: 1.2; }
+  line-height: 1.2;
+}
 
 address {
-  font-style: normal; }
+  font-style: normal;
+}
 
 a {
   position: relative;
   color: #44515C;
-  text-decoration: none; }
-  a:after {
-    background-color: #44515C;
-    position: absolute;
-    bottom: -2px;
-    content: "";
-    display: block;
-    height: 1px;
-    left: 0;
-    width: 100%; }
+  text-decoration: none;
+}
+a:after {
+  background-color: #44515C;
+  position: absolute;
+  bottom: -2px;
+  content: "";
+  display: block;
+  height: 1px;
+  left: 0;
+  width: 100%;
+}
 
 .muted-link:after,
 a:not(.apps__app):hover:after {
-  content: none; }
+  content: none;
+}
 
 img {
-  max-width: 100%; }
+  max-width: 100%;
+}
 
 figure {
   margin: 0;
-  text-align: center; }
+  text-align: center;
+}
 
 .headline {
-  margin: 64px 0; }
+  margin: 64px 0;
+}
 
 .headline__h1 {
   margin: 0;
-  letter-spacing: 0.11px; }
+  letter-spacing: 0.11px;
+}
 
 .headline__h2 {
   margin: 0;
   margin-top: 8px;
   font-family: "NHaasGroteskDSPro-55Rg";
-  color: #44515C; }
+  color: #44515C;
+}
 
 .wrapper {
   padding: 64px 24px;
@@ -113,7 +134,20 @@ figure {
   max-width: 800px;
   justify-content: center;
   min-height: calc(100vh - 59px);
-  margin: 0 auto; }
+  margin: 0 auto;
+}
+
+.home-template .wrapper {
+  max-width: 1200px;
+}
+
+.headline-wrapper {
+  height: calc(100vh - min(1200px,100vw)*0.25 - 2.986rem - 130px);
+}
+.headline-wrapper .headline {
+  top: 200px;
+  position: sticky;
+}
 
 .header {
   position: fixed;
@@ -122,7 +156,8 @@ figure {
   right: 0;
   text-align: right;
   padding: 24px;
-  z-index: 1000; }
+  z-index: 1000;
+}
 
 .menu {
   margin: 0;
@@ -134,45 +169,56 @@ figure {
   justify-content: space-between;
   padding: 16px 24px;
   font-family: "NHaasGroteskDSPro-75Bd";
-  background-color: #fff; }
-  .home-template .menu {
-    background: none; }
+  background-color: #fff;
+}
+.home-template .menu {
+  background: none;
+}
 
 .menu__a {
   text-decoration: none;
   color: #44515C;
   font-size: 1.2rem;
-  display: block; }
-  .menu__a:hover, .menu__a--active {
-    color: #265278; }
+  display: block;
+}
+.menu__a:hover, .menu__a--active {
+  color: #265278;
+}
 
-.menu__a:after, .customer:after {
-  content: none; }
-.menu__a:hover, .customer:hover {
-  position: relative; }
-  .menu__a:hover:after, .customer:hover:after {
-    background-color: #44515C;
-    position: absolute;
-    bottom: -2px;
-    content: "";
-    display: block;
-    height: 1px;
-    left: 0;
-    width: 100%; }
+.customer:after, .menu__a:after {
+  content: none;
+}
+.customer:hover, .menu__a:hover {
+  position: relative;
+}
+.customer:hover:after, .menu__a:hover:after {
+  background-color: #44515C;
+  position: absolute;
+  bottom: -2px;
+  content: "";
+  display: block;
+  height: 1px;
+  left: 0;
+  width: 100%;
+}
 
 .map {
-  padding: 24px 0; }
+  padding: 24px 0;
+}
 
 .member__img {
-  width: 300px; }
+  width: 300px;
+}
 
 .member__name {
-  margin-top: 4px; }
+  margin-top: 4px;
+}
 
 .member__name,
 .member__email,
 .member__job {
-  padding: 0 4px; }
+  padding: 0 4px;
+}
 
 .team {
   margin-top: 64px;
@@ -181,141 +227,181 @@ figure {
   column-gap: 16px;
   row-gap: 64px;
   grid-column-gap: 8px;
-  grid-row-gap: 64px; }
+  grid-row-gap: 64px;
+}
 
 .customer {
   display: block;
-  margin-bottom: 64px; }
+  margin-bottom: 64px;
+}
 
 .mt {
-  margin-top: 64px; }
+  margin-top: 64px;
+}
 
 .footer {
   color: #fff;
   background-color: #44515C;
   padding: 64px 24px;
   display: flex;
-  position: relative; }
+  position: relative;
+}
 
 .footer__cookie {
   position: absolute;
   bottom: 16px;
   right: 16px;
   color: #999;
-  font-size: 0.6rem; }
+  font-size: 0.6rem;
+}
 
 .footer__left {
-  flex-basis: 25%; }
+  flex-basis: 25%;
+}
 
 .footer__right {
-  flex: 1 1; }
+  flex: 1 1;
+}
 
 .footer__link {
-  color: #fff; }
-  .footer__link::after {
-    background-color: #fff; }
-    .footer__link::after:hover {
-      background-color: red; }
+  color: #fff;
+}
+.footer__link::after {
+  background-color: #fff;
+}
+.footer__link::after:hover {
+  background-color: red;
+}
 
 object-fit {
-  z-index: -1000; }
+  z-index: -1000;
+}
 
 .apps {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-column-gap: 1.44rem;
-  grid-row-gap: 1.44rem; }
-  @media (max-width: 700px) {
-    .apps {
-      grid-template-columns: repeat(2, 1fr); } }
+  grid-template-columns: repeat(4, 1fr);
+  grid-column-gap: 2.074rem;
+  grid-row-gap: 2.074rem;
+}
+@media (max-width: 700px) {
+  .apps {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
 
 .apps__app {
   display: block;
-  text-decoration: none; }
-  .apps__app:after {
-    content: none; }
+  text-decoration: none;
+}
+.apps__app:after {
+  content: none;
+}
 
 .apps__app__inner {
   position: relative;
   background-color: #fff;
-  box-shadow: 0 0 2px rgba(0, 0, 0, 0.2);
-  transition: 0.2s all linear; }
-  .apps__app__inner:before {
-    content: " ";
-    display: block;
-    width: 100%;
-    padding-top: 80%; }
-  .apps__app__inner:after {
-    position: absolute;
-    top: 0;
-    left: 0;
-    display: block;
-    content: " ";
-    width: 100%;
-    height: 100%;
-    background: white;
-    background: radial-gradient(circle, rgba(255, 255, 255, 0.1908964269) 0%, rgba(0, 0, 0, 0.1012605726) 100%); }
-  .apps__app__inner:hover {
-    box-shadow: 0 0 7px rgba(0, 0, 0, 0.2);
-    transform: scale(1.05); }
+  border-radius: 40px;
+  box-shadow: 0 0 3px rgba(0, 0, 0, 0.3);
+  transition: 0.2s all linear;
+}
+.apps__app__inner:before {
+  content: " ";
+  display: block;
+  width: 100%;
+  padding-top: 100%;
+}
+.apps__app__inner:after {
+  border-radius: 40px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: block;
+  content: " ";
+  width: 100%;
+  height: 100%;
+  background: white;
+  background: radial-gradient(circle, rgba(255, 255, 255, 0.1908964269) 0%, rgba(0, 0, 0, 0.2953782196) 100%);
+  mix-blend-mode: hard-light;
+}
+.apps__app__inner:hover {
+  box-shadow: 0 0 7px rgba(0, 0, 0, 0.3);
+  transform: scale(1.05);
+}
 
 .apps__app__img {
   width: 100%;
+  border-radius: 40px;
   display: block;
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  object-fit: cover; }
-  .apps__app__img--contain {
-    object-fit: contain;
-    padding: 1.2rem; }
+  object-fit: cover;
+}
+.apps__app__img--contain {
+  object-fit: contain;
+  padding: 1.2rem;
+}
 
 .apps__app__label {
-  margin-top: 0.6rem; }
+  margin-top: 0.6rem;
+}
 
 @media (max-width: 700px) {
   body {
-    padding-top: 0; }
+    padding-top: 0;
+  }
 
   .team {
-    display: block; }
+    display: block;
+  }
 
   .member {
-    margin-bottom: 64px; }
+    margin-bottom: 64px;
+  }
 
   .headline__h1,
-  .headline__h2 {
+.headline__h2 {
     overflow-wrap: break-word;
     word-wrap: break-word;
     -webkit-hyphens: auto;
     -ms-hyphens: auto;
-    hyphens: auto; }
+    hyphens: auto;
+  }
 
   h1 {
-    font-size: 1.44rem; }
+    font-size: 1.44rem;
+  }
 
   h2 {
-    font-size: 1.19rem; }
+    font-size: 1.19rem;
+  }
 
   .menu {
     overflow-y: scroll;
-    -webkit-overflow-scrolling: touch; }
+    -webkit-overflow-scrolling: touch;
+  }
 
   .menu__a {
-    margin-right: 16px; }
+    margin-right: 16px;
+  }
 
   .footer {
-    display: block; }
+    display: block;
+  }
 
   .footer__left {
-    margin-bottom: 64px; }
+    margin-bottom: 64px;
+  }
 
   .header {
-    position: static; }
+    position: static;
+  }
 
   .wrapper {
-    padding-top: 0; } }
+    padding-top: 0;
+  }
+}
 
 /*# sourceMappingURL=styles.css.map */
