Fix wrong partial include

--- a/page-services.hbs
+++ b/page-services.hbs
@@ -7,7 +7,7 @@
 <div class="apps">
   {{#get "posts" filter="primary_tag:service" include="tags"}}
     {{#foreach posts}}
-      {{> "home-work"}}
+      {{> "app"}}
     {{/foreach}}
   {{/get}}
 </div>
