Optimize image size

--- a/partials/app.hbs
+++ b/partials/app.hbs
@@ -1,9 +1,7 @@
 <a class="apps__app" href="{{url absolute=true}}" data-aos="fade-up">
   <div class="apps__app__inner">
     <img
-    srcset="{{img_url feature_image size="grid"}} 416w,
-            {{img_url feature_image size="responsive"}} 768w"
-    src="{{img_url feature_image}}" class="apps__app__img"
+    src="{{img_url feature_image size="app"}}" class="apps__app__img"
     alt="{{title}}">
   </div>
   <div class="apps__app__label">{{title}}</div>
