--- a/assets/css/styles.sass
+++ b/assets/css/styles.sass
@@ -1,5 +1,5 @@
 @import url("//hello.myfonts.net/count/3b1adf")
-@import "aos.css"
+@import "aos"
 
 
 @font-face
@@ -152,10 +152,10 @@ figure
   min-height: calc(100vh - 59px)
   margin: 0 auto
 
-.home-template 
+.home-template
   .wrapper
     max-width: 1200px
-  
+
 .headline-wrapper
   height: calc(100vh - min(1200px,100vw)*0.25 - #{$fxxl} - 130px)
 
