--- a/page-contact.hbs
+++ b/page-contact.hbs
@@ -14,6 +14,7 @@
 
 <div id="map" class="mt" style="width: 100%; height: 300px"></div>
 
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAbzcIXmPvUh4voaIoCbmdws2HVZROADfA" defer></script>
 <script>
   document.addEventListener('DOMContentLoaded', loadMap, { once: true });
   function loadMap() {
