--- a/partials/app.hbs
+++ b/partials/app.hbs
@@ -1,4 +1,4 @@
-<a class="apps__app" href="{{url absolute=true}}" data-aos="fade-up">
+<a class="apps__app" href="{{#has tag="link"}}{{excerpt}}{{else}}{{url absolute=true}}{{/has}}" data-aos="fade-up">
   <div class="apps__app__inner">
     <img
     src="{{img_url feature_image size="app"}}" class="apps__app__img"
